# managarm-hwci

./: pyproject.toml
hwci/: __main__.py  boot_artifacts.py  bootables.py  ci.py  cli.py  server.py  shelly.py  sqlite_util.py  timer_util.py  xbps.py
hwci/blockd/: __main__.py  client.py  daemon.py  models.py
hwci/cas/: __init__.py
hwci/relay/: __main__.py  ci.py  server.py
hwci_cas/: __init__.py
hwci_relay/: __main__.py  auth.py  ci.py  server.py
hwci_target/: __main__.py  bootables.py  ci.py  server.py
