[project]
name = "managarm-hwci"
version = "0.1"
authors = [
    {name = "The Managarm Project", email = "info@managarm.org"}
]
license = "MIT"

dependencies = [
    "aiohttp",
    "pydantic",
    "tqdm",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# Include hwci and all packages below it.
[tool.setuptools.packages.find]
include = ["hwci"]
